BMC button in options footer

--- a/options.html
+++ b/options.html
@@ -65,6 +65,11 @@
     .footer-item:hover {
         color: #999999;
     }
+
+    .right-bar {
+        padding-right: 16px;
+        border-right: 1px solid #777777;
+    }
   </style>
 </head>
 <body>
@@ -80,12 +85,12 @@
   </div>
 
   <div class="footer-section">
-      <a target="_blank" href="https://forms.gle/3qgtDua2EsbJe4Tp7" class="feedback-section footer-item">
-          Report and Feedback
-      </a>
-      <!-- <a href="#" class="support footer-item">
-          Support
-      </a> -->
+    <a target="_blank" href="https://buymeacoffee.com/sarin" class="support footer-item right-bar">
+        Buy Me a Coffee
+    </a>
+    <a target="_blank" href="https://forms.gle/3qgtDua2EsbJe4Tp7" class="feedback-section footer-item">
+        Report & Feedback
+    </a>
   </div>
 
   <script src="options.js"></script>
